adding favorite, summary, recomendation and video streaming via url

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,6 +29,8 @@ server:
     include-stacktrace: on_param
     include-message: always
     include-binding-errors: always
+  netty:
+    connection-timeout: 60000
 
 logging:
   level:
